antlr/autogenerated/SQLParser.java
// Generated from /Users/jan/Documents/Git/PredictorFactory/antlr/parser/SQL.g4 by ANTLR 4.5.3
package autogenerated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import org.jetbrains.annotations.*;
import org.jetbrains.annotations.NotNull;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

    @NotNull protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        FROM=1, JOIN=2, ON=3, AND=4, USING=5, DATEDIFF=6, DATETONUMBER=7, CORR=8,
        LBR=9, RBR=10, COMMA=11, EQUALS=12, ARITHMETIC=13, TEXT=14, WS=15;
    public static final int
        RULE_expression = 0, RULE_bracket = 1, RULE_datediff = 2, RULE_datetonumber = 3,
        RULE_corr = 4, RULE_from = 5, RULE_table = 6, RULE_alias = 7, RULE_using = 8,
        RULE_columns = 9, RULE_on = 10, RULE_payload = 11;
    public static final String[] ruleNames = {
        "expression", "bracket", "datediff", "datetonumber", "corr", "from", "table",
        "alias", "using", "columns", "on", "payload"
    };

    private static final String[] _LITERAL_NAMES = {
        null, null, null, null, null, null, null, null, null, "'('", "')'", "','",
        "'='"
    };
    private static final String[] _SYMBOLIC_NAMES = {
        null, "FROM", "JOIN", "ON", "AND", "USING", "DATEDIFF", "DATETONUMBER",
        "CORR", "LBR", "RBR", "COMMA", "EQUALS", "ARITHMETIC", "TEXT", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @NotNull @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @NotNull @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @NotNull @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @NotNull @Override
    public String getGrammarFileName() { return "SQL.g4"; }

    @NotNull @Override
    public String[] getRuleNames() { return ruleNames; }

    @NotNull @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public SQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }
    public static class ExpressionContext extends ParserRuleContext {
        public List<FromContext> from() {
            return getRuleContexts(FromContext.class);
        }
        public FromContext from(int i) {
            return getRuleContext(FromContext.class,i);
        }
        public List<TerminalNode> TEXT() { return getTokens(SQLParser.TEXT); }
        public TerminalNode TEXT(int i) {
            return getToken(SQLParser.TEXT, i);
        }
        public List<BracketContext> bracket() {
            return getRuleContexts(BracketContext.class);
        }
        public BracketContext bracket(int i) {
            return getRuleContext(BracketContext.class,i);
        }
        public List<TerminalNode> WS() { return getTokens(SQLParser.WS); }
        public TerminalNode WS(int i) {
            return getToken(SQLParser.WS, i);
        }
        public List<TerminalNode> AND() { return getTokens(SQLParser.AND); }
        public TerminalNode AND(int i) {
            return getToken(SQLParser.AND, i);
        }
        public List<TerminalNode> EQUALS() { return getTokens(SQLParser.EQUALS); }
        public TerminalNode EQUALS(int i) {
            return getToken(SQLParser.EQUALS, i);
        }
        public List<TerminalNode> ARITHMETIC() { return getTokens(SQLParser.ARITHMETIC); }
        public TerminalNode ARITHMETIC(int i) {
            return getToken(SQLParser.ARITHMETIC, i);
        }
        public List<DatediffContext> datediff() {
            return getRuleContexts(DatediffContext.class);
        }
        public DatediffContext datediff(int i) {
            return getRuleContext(DatediffContext.class,i);
        }
        public List<DatetonumberContext> datetonumber() {
            return getRuleContexts(DatetonumberContext.class);
        }
        public DatetonumberContext datetonumber(int i) {
            return getRuleContext(DatetonumberContext.class,i);
        }
        public List<CorrContext> corr() {
            return getRuleContexts(CorrContext.class);
        }
        public CorrContext corr(int i) {
            return getRuleContext(CorrContext.class,i);
        }
        public List<TerminalNode> COMMA() { return getTokens(SQLParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(SQLParser.COMMA, i);
        }
        public ExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_expression; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterExpression(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitExpression(this);
        }
    }

    @NotNull public final ExpressionContext expression() throws RecognitionException {
        ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_expression);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
            setState(37);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input,1,_ctx);
            while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                if ( _alt==1 ) {
                    {
                    setState(35);
                    switch (_input.LA(1)) {
                    case FROM:
                        {
                        setState(24);
                        from();
                        }
                        break;
                    case TEXT:
                        {
                        setState(25);
                        match(TEXT);
                        }
                        break;
                    case LBR:
                        {
                        setState(26);
                        bracket();
                        }
                        break;
                    case WS:
                        {
                        setState(27);
                        match(WS);
                        }
                        break;
                    case AND:
                        {
                        setState(28);
                        match(AND);
                        }
                        break;
                    case EQUALS:
                        {
                        setState(29);
                        match(EQUALS);
                        }
                        break;
                    case ARITHMETIC:
                        {
                        setState(30);
                        match(ARITHMETIC);
                        }
                        break;
                    case DATEDIFF:
                        {
                        setState(31);
                        datediff();
                        }
                        break;
                    case DATETONUMBER:
                        {
                        setState(32);
                        datetonumber();
                        }
                        break;
                    case CORR:
                        {
                        setState(33);
                        corr();
                        }
                        break;
                    case COMMA:
                        {
                        setState(34);
                        match(COMMA);
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                    }
                    }
                }
                setState(39);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input,1,_ctx);
            }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BracketContext extends ParserRuleContext {
        public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
        public BracketContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_bracket; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterBracket(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitBracket(this);
        }
    }

    @NotNull public final BracketContext bracket() throws RecognitionException {
        BracketContext _localctx = new BracketContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_bracket);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(40);
            match(LBR);
            setState(41);
            expression();
            setState(42);
            match(RBR);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DatediffContext extends ParserRuleContext {
        public TerminalNode DATEDIFF() { return getToken(SQLParser.DATEDIFF, 0); }
        public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
        public List<PayloadContext> payload() {
            return getRuleContexts(PayloadContext.class);
        }
        public PayloadContext payload(int i) {
            return getRuleContext(PayloadContext.class,i);
        }
        public TerminalNode COMMA() { return getToken(SQLParser.COMMA, 0); }
        public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
        public DatediffContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_datediff; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterDatediff(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitDatediff(this);
        }
    }

    @NotNull public final DatediffContext datediff() throws RecognitionException {
        DatediffContext _localctx = new DatediffContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_datediff);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(44);
            match(DATEDIFF);
            setState(45);
            match(LBR);
            setState(46);
            payload();
            setState(47);
            match(COMMA);
            setState(48);
            payload();
            setState(49);
            match(RBR);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DatetonumberContext extends ParserRuleContext {
        public TerminalNode DATETONUMBER() { return getToken(SQLParser.DATETONUMBER, 0); }
        public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
        public PayloadContext payload() {
            return getRuleContext(PayloadContext.class,0);
        }
        public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
        public DatetonumberContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_datetonumber; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterDatetonumber(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitDatetonumber(this);
        }
    }

    @NotNull public final DatetonumberContext datetonumber() throws RecognitionException {
        DatetonumberContext _localctx = new DatetonumberContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_datetonumber);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(51);
            match(DATETONUMBER);
            setState(52);
            match(LBR);
            setState(53);
            payload();
            setState(54);
            match(RBR);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CorrContext extends ParserRuleContext {
        public TerminalNode CORR() { return getToken(SQLParser.CORR, 0); }
        public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
        public List<PayloadContext> payload() {
            return getRuleContexts(PayloadContext.class);
        }
        public PayloadContext payload(int i) {
            return getRuleContext(PayloadContext.class,i);
        }
        public TerminalNode COMMA() { return getToken(SQLParser.COMMA, 0); }
        public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
        public CorrContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_corr; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterCorr(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitCorr(this);
        }
    }

    @NotNull public final CorrContext corr() throws RecognitionException {
        CorrContext _localctx = new CorrContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_corr);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(56);
            match(CORR);
            setState(57);
            match(LBR);
            setState(58);
            payload();
            setState(59);
            match(COMMA);
            setState(60);
            payload();
            setState(61);
            match(RBR);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FromContext extends ParserRuleContext {
        public TerminalNode FROM() { return getToken(SQLParser.FROM, 0); }
        public List<BracketContext> bracket() {
            return getRuleContexts(BracketContext.class);
        }
        public BracketContext bracket(int i) {
            return getRuleContext(BracketContext.class,i);
        }
        public List<TableContext> table() {
            return getRuleContexts(TableContext.class);
        }
        public TableContext table(int i) {
            return getRuleContext(TableContext.class,i);
        }
        public List<TerminalNode> WS() { return getTokens(SQLParser.WS); }
        public TerminalNode WS(int i) {
            return getToken(SQLParser.WS, i);
        }
        public List<AliasContext> alias() {
            return getRuleContexts(AliasContext.class);
        }
        public AliasContext alias(int i) {
            return getRuleContext(AliasContext.class,i);
        }
        public List<TerminalNode> JOIN() { return getTokens(SQLParser.JOIN); }
        public TerminalNode JOIN(int i) {
            return getToken(SQLParser.JOIN, i);
        }
        public List<TerminalNode> TEXT() { return getTokens(SQLParser.TEXT); }
        public TerminalNode TEXT(int i) {
            return getToken(SQLParser.TEXT, i);
        }
        public List<UsingContext> using() {
            return getRuleContexts(UsingContext.class);
        }
        public UsingContext using(int i) {
            return getRuleContext(UsingContext.class,i);
        }
        public List<OnContext> on() {
            return getRuleContexts(OnContext.class);
        }
        public OnContext on(int i) {
            return getRuleContext(OnContext.class,i);
        }
        public FromContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_from; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterFrom(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitFrom(this);
        }
    }

    @org.jetbrains.annotations.NotNull public final FromContext from() throws RecognitionException {
        FromContext _localctx = new FromContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_from);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
            setState(63);
            match(FROM);
            setState(67);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la==WS) {
                {
                {
                setState(64);
                match(WS);
                }
                }
                setState(69);
                _errHandler.sync(this);
                _la = _input.LA(1);
            }
            setState(72);
            switch (_input.LA(1)) {
            case LBR:
                {
                setState(70);
                bracket();
                }
                break;
            case TEXT:
                {
                setState(71);
                table();
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
            setState(77);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input,4,_ctx);
            while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                if ( _alt==1 ) {
                    {
                    {
                    setState(74);
                    match(WS);
                    }
                    }
                }
                setState(79);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input,4,_ctx);
            }
            setState(81);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
            case 1:
                {
                setState(80);
                alias();
                }
                break;
            }
            setState(145);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input,17,_ctx);
            while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                if ( _alt==1 ) {
                    {
                    {
                    setState(86);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,6,_ctx);
                    while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                        if ( _alt==1 ) {
                            {
                            {
                            setState(83);
                            match(WS);
                            }
                            }
                        }
                        setState(88);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input,6,_ctx);
                    }
                    setState(92);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,7,_ctx);
                    while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                        if ( _alt==1 ) {
                            {
                            {
                            setState(89);
                            match(TEXT);
                            }
                            }
                        }
                        setState(94);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input,7,_ctx);
                    }
                    setState(98);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,8,_ctx);
                    while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                        if ( _alt==1 ) {
                            {
                            {
                            setState(95);
                            match(WS);
                            }
                            }
                        }
                        setState(100);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input,8,_ctx);
                    }
                    setState(104);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la==TEXT) {
                        {
                        {
                        setState(101);
                        match(TEXT);
                        }
                        }
                        setState(106);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(110);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la==WS) {
                        {
                        {
                        setState(107);
                        match(WS);
                        }
                        }
                        setState(112);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(113);
                    match(JOIN);
                    setState(117);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la==WS) {
                        {
                        {
                        setState(114);
                        match(WS);
                        }
                        }
                        setState(119);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(122);
                    switch (_input.LA(1)) {
                    case LBR:
                        {
                        setState(120);
                        bracket();
                        }
                        break;
                    case TEXT:
                        {
                        setState(121);
                        table();
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                    }
                    setState(127);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,13,_ctx);
                    while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                        if ( _alt==1 ) {
                            {
                            {
                            setState(124);
                            match(WS);
                            }
                            }
                        }
                        setState(129);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input,13,_ctx);
                    }
                    setState(131);
                    _errHandler.sync(this);
                    switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
                    case 1:
                        {
                        setState(130);
                        alias();
                        }
                        break;
                    }
                    setState(136);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,15,_ctx);
                    while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                        if ( _alt==1 ) {
                            {
                            {
                            setState(133);
                            match(WS);
                            }
                            }
                        }
                        setState(138);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input,15,_ctx);
                    }
                    setState(141);
                    switch (_input.LA(1)) {
                    case USING:
                        {
                        setState(139);
                        using();
                        }
                        break;
                    case ON:
                        {
                        setState(140);
                        on();
                        }
                        break;
                    case FROM:
                    case JOIN:
                    case AND:
                    case DATEDIFF:
                    case DATETONUMBER:
                    case CORR:
                    case LBR:
                    case RBR:
                    case COMMA:
                    case EQUALS:
                    case ARITHMETIC:
                    case TEXT:
                    case WS:
                        break;
                    default:
                        throw new NoViableAltException(this);
                    }
                    }
                    }
                }
                setState(147);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input,17,_ctx);
            }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TableContext extends ParserRuleContext {
        public TerminalNode TEXT() { return getToken(SQLParser.TEXT, 0); }
        public TableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_table; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterTable(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitTable(this);
        }
    }

    @NotNull public final TableContext table() throws RecognitionException {
        TableContext _localctx = new TableContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_table);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(148);
            match(TEXT);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AliasContext extends ParserRuleContext {
        public TerminalNode TEXT() { return getToken(SQLParser.TEXT, 0); }
        public AliasContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_alias; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterAlias(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitAlias(this);
        }
    }

    @NotNull public final AliasContext alias() throws RecognitionException {
        AliasContext _localctx = new AliasContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_alias);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(150);
            match(TEXT);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class UsingContext extends ParserRuleContext {
        public TerminalNode USING() { return getToken(SQLParser.USING, 0); }
        public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
        public ColumnsContext columns() {
            return getRuleContext(ColumnsContext.class,0);
        }
        public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
        public List<TerminalNode> WS() { return getTokens(SQLParser.WS); }
        public TerminalNode WS(int i) {
            return getToken(SQLParser.WS, i);
        }
        public UsingContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_using; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterUsing(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitUsing(this);
        }
    }

    @NotNull public final UsingContext using() throws RecognitionException {
        UsingContext _localctx = new UsingContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_using);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(152);
            match(USING);
            setState(156);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la==WS) {
                {
                {
                setState(153);
                match(WS);
                }
                }
                setState(158);
                _errHandler.sync(this);
                _la = _input.LA(1);
            }
            setState(159);
            match(LBR);
            setState(163);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la==WS) {
                {
                {
                setState(160);
                match(WS);
                }
                }
                setState(165);
                _errHandler.sync(this);
                _la = _input.LA(1);
            }
            setState(166);
            columns();
            setState(170);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la==WS) {
                {
                {
                setState(167);
                match(WS);
                }
                }
                setState(172);
                _errHandler.sync(this);
                _la = _input.LA(1);
            }
            setState(173);
            match(RBR);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ColumnsContext extends ParserRuleContext {
        public List<TerminalNode> TEXT() { return getTokens(SQLParser.TEXT); }
        public TerminalNode TEXT(int i) {
            return getToken(SQLParser.TEXT, i);
        }
        public List<TerminalNode> COMMA() { return getTokens(SQLParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(SQLParser.COMMA, i);
        }
        public List<TerminalNode> WS() { return getTokens(SQLParser.WS); }
        public TerminalNode WS(int i) {
            return getToken(SQLParser.WS, i);
        }
        public ColumnsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_columns; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterColumns(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitColumns(this);
        }
    }

    @NotNull public final ColumnsContext columns() throws RecognitionException {
        ColumnsContext _localctx = new ColumnsContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_columns);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
            setState(175);
            match(TEXT);
            setState(192);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input,23,_ctx);
            while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                if ( _alt==1 ) {
                    {
                    {
                    setState(179);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la==WS) {
                        {
                        {
                        setState(176);
                        match(WS);
                        }
                        }
                        setState(181);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(182);
                    match(COMMA);
                    setState(186);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la==WS) {
                        {
                        {
                        setState(183);
                        match(WS);
                        }
                        }
                        setState(188);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(189);
                    match(TEXT);
                    }
                    }
                }
                setState(194);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input,23,_ctx);
            }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OnContext extends ParserRuleContext {
        public TerminalNode ON() { return getToken(SQLParser.ON, 0); }
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public OnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_on; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).enterOn(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SQLListener ) ((SQLListener)listener).exitOn(this);
        }
    }

    @NotNull public final OnContext on() throws RecognitionException {
        OnContext _localctx = new OnContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_on);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(195);
            match(ON);
            setState(196);
            expression();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }
